[package]
name = "bushido_keys_rs"
version = "0.1.3"
edition = "2021"
description = "ninja mouse keys."
license = "MIT"

# ... other fields ...
include = ["src/**", "Cargo.toml", "config/**"]



[dependencies]
# Windows API bindings with necessary Win32 features enabled.


windows = { version = "0.59.0", features = [
    "Win32_Foundation",
    "Win32_System_LibraryLoader",
    "Win32_Graphics_Gdi",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_System_Diagnostics_Debug",
] }


# For global, thread‐safe lazy initialization.
once_cell = "1.20.3"

# For JSON parsing and serialization.
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"

tracelogging = "1.2.2"
env_logger = "0.11.5"
log = "0.4.22"
